update add product
