# models/productModel.js
@@ -1,45 +1,65 @@
 import mongoose from 'mongoose';
 
 const productSchema = new mongoose.Schema({
-  productName: {
+  name: {
     type: String,
-    required: true,
-  },
-  price: {
-    type: Number,
-    required: true,
+    required: true
   },
   description: {
     type: String,
-  },
-  userId: {
-    type: mongoose.Schema.Types.ObjectId,
-    ref: 'User',
     required: true
+  },
+  price: {
+    type: Number,
+    required: true
+  },
+  discountPrice: {
+    type: Number,
+    validate: {
+      validator: function(value) {
+        return value ? value < this.price : true;
+      },
+      message: 'Discount price must be less than the regular price'
+    }
+  },
+  sale: {
+    type: Boolean,
+    default: false
   },
   category: {
     type: String,
-    required:true,
-    "enums":"['Air Conditioners,Gadgets, Home Appliances, Kitchen Appliances, Computer, Refregirator, Smart Phone']"
+    required: true,
+    enum: ['Air Conditioners', 'Gadgets', 'Home Appliances', 'Kitchen Appliances', 'Computer', 'Refrigerator', 'Smart Phone']
   },
-  image: {
-    public_id: {
+  stock: { 
+    type: Number, 
+    required: true 
+  },
+  image: [{
+    url: {
       type: String,
+      required: true
     },
-    asset_id:{
+    type: {
       type: String,
-    },
-    url:{
-      type: String,
+      enum: ['default', 'hover', 'gallery'],
+      required: true
     }
-  },
-  updatedAt: {
+  }],
+  features: [String],
+  created_at: {
     type: Date,
     default: Date.now
+  },
+  updated_at: {
+    type: Date,
+    default: Date.now
+  },
+  user: {
+    type: mongoose.Schema.Types.ObjectId,
+    ref: 'User',
+    required: true
   }
-}, {
-  timestamps: true
-
 });
 
 const Product = mongoose.model('Product', productSchema);
